# 3D-Model-Viewer

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: parser.cc  parser.h  transform.c  transform.h
src/observer/: observer.h
src/view/: glview.cc  glview.h  mainwindow.cc  mainwindow.h  mainwindow.ui  settings.cc  settings.h
